Add resource-service test coverage: real filter-chain access control
resource-service is the template for adding new protected microservices,
so proving its @PreAuthorize enforcement for real (not just that the
annotation is present) matters beyond this one service. Same Boot 2.0.2 ->
2.2.13 / Hoxton.SR12 bump as member-service/auth-service, replacing the
JDK-21-broken generated contextLoads() smoke test.

Hoxton's spring-cloud-starter-security no longer pulls spring-security-oauth2
transitively (member-service gets it via the common lib instead; this module
doesn't depend on common), so spring-cloud-starter-oauth2 had to be added
directly - without it the existing JwtConvertor.java doesn't compile under
the new Boot version.

ResourceServiceApiIT mints JWTs against a test signing key (no real
dependency to exercise via Testcontainers here) and drives the actual HTTP +
filter chain: no token -> 401, a valid token without ROLE_MEMBER -> 403, a
valid token with the role -> 200. JwtConvertorTest covers the claims-map
override that JwtUtil.getEmail relies on downstream. Unlike auth-service,
no --add-opens is needed - this service never builds the JAXB-based error
converter since it's a resource server, not an authorization server.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_013TaT7qkNHiDfmpzMLaGShM